data/derived/fa15/progs/unify/prog2242.ml.out
Characters 382-402:
  | Trip(t,r,s)     -> (sin(pi*.eval(r,x,y)) * tan(pi*.eval(s,x,y))) 
                        ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
